# rdfix

./: .gitignore  Cargo.toml  Changelog.md  Cross.toml  README.md  justfile  run_test.sh
.cargo/: config.toml
benches/: generated_funcs_benchmark.rs  inversion_benchmark.rs
examples/: forward_and_reverse.rs
notebooks/: rust_scratch.ipynb  scratch.ipynb
rdfix/: Cargo.toml  Cross.toml
rdfix/src/: main.rs  nuts.rs
rdfix/src/inverse/: mod.rs
rdfix_gf/: Cargo.toml
rdfix_gf/src/: generated_functions.rs  lib.rs
src/: appconfig.rs  cmdline.rs  data.rs  lib.rs  main.rs  main_body.rs  nuts.rs  postproc.rs
src/forward/: constants.rs  generated_functions.rs  mod.rs  quickplot.rs  stepper.rs
src/inverse/: generic_primitives.rs  mod.rs
