[package]
name = "rdfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
ode_solvers = "0.3"
rdfix_gf = {path="../rdfix_gf"}
statrs = "0.16"
autodiff = "0.7"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
ndarray = { version = "0.15.0", features = ["blas", "serde"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
num = "0.4"
finitediff = {version="0.1.4", features = ["ndarray"]}
soa_derive = "0.13"
polars = {version="0.29", features=["dtype-datetime"]}
debug_plotter = "0.2"
plotters = "0.3"
plotlib = "0.5"
itertools = "0.10"
assert_approx_eq = "1.1"
indicatif = "0.17"
num-traits = "0.2.15"
argmin = {version="0.8.0", default-features=false, features=["slog-logger"]}
# argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
argmin-math = { version = "0.3", features = ["ndarray_latest-serde"] }
cobyla = "0.3.2"
hammer-and-sample = "0.2"
rand = "0.8.5"
rand_pcg = "0.3.1"
arrayvec = "0.7.2"
argmin_testfunctions = "0.1.1"

#[dev-dependencies]
#assert_approx_eq = "1.1"

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = true

[[bin]]
name="rdfix-deconvolve"
path="src/main.rs"
bench = false

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "inversion_benchmark"
harness = false
