[package]
name = "rdfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
rdfix_gf = {path="../rdfix_gf"}
statrs = "0.16"
autodifflib = {package="autodiff", version="0.7"}
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
csv = "1.2"
serde = { version = "1", features = ["derive"] }

ndarray = { version = "0.15", features = ["blas", "serde"] }

# switch to netlib BLAS when compiling release version, to avoid any dependencies on system BLAS
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
#blas-src = { version = "0.8", default-features = false, features = ["netlib"] }

num = "0.4"
soa_derive = "0.13"
debug_plotter = "0.2"
plotters = "0.3"
itertools = "0.11"
assert_approx_eq = "1.1"
indicatif = "0.17"
num-traits = "0.2.15"
argmin = {version="0.8", default-features=false, features=["slog-logger", "rayon"]}
# argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
argmin-math = { version = "0.3", features = ["ndarray_latest-serde"] }
cobyla = "0.3.2"
hammer-and-sample = {version = "0.2", features = ["rayon"]}
rand = "0.8.5"
rand_pcg = "0.3.1"
arrayvec = "0.7.2"
argmin_testfunctions = "0.1.1"
nuts-rs = "0.6"
thiserror = "1.0"
rayon = "1.7.0"
netcdf = { version = "0.8.1", features = ["ndarray"] }
tempfile = "3.6.0"
chrono = { version = "0.4.26", features = ["serde"] }
lazy_static = "1.4.0"
clap = { version = "4.3.17", features = ["derive", "string"] }
wild = "2.1.0"
toml = "0.7.6"
rand_chacha = "0.3"
approx = "0.5.1"

#finitediff = {version="0.1.4", features = ["ndarray"]}
#ode_solvers = "0.3"
#polars = {version="0.29", features=["dtype-datetime"]}



#[dev-dependencies]
#assert_approx_eq = "1.1"

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = true
lto = false

[[bin]]
name="rdfix-deconvolve"
path="src/main.rs"
bench = false

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "generated_funcs_benchmark"
harness = false

[[bench]]
name = "inversion_benchmark"
harness = false
